pushed all files to repo

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,13 @@
 <body>
 
   <!-- TODO: Create header, main, and footer elements -->
+  <header>
+    
+  </header>
 
+  <main></main>
+
+  <footer></footer>
 </body>
 
 </html>
