--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
   <!-- TODO: Create header, main, and footer elements -->
   <header>
-    
+    <h1>My First Blog</h1>
   </header>
 
   <main></main>
