--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My First Blog</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <link rel="stylesheet" href="./assets/css/form.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>My First Blog</title>
 
-    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-    <script defer src="./assets/js/form.js" type="text/javascript"></script>
-  </head>
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+  <link rel="stylesheet" href="./assets/css/form.css" />
+
+  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+  <script defer src="./assets/js/form.js" type="text/javascript"></script>
+</head>
+
 <body>
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
 
   <!-- A form element that contains the following: -->
 
-    <!-- An input element whose label and id are `username` -->
+    <form action="">
 
-    <!-- An input element whose label and id are `title` -->
+      <!-- An input element whose label and id are `username` -->
+      <label for="username">Username</label>
+      <input type="text" id="username">
 
-    <!-- A textarea element whose label and id are `content` -->
+      <!-- An input element whose label and id are `title` -->
+      <label for="title">Title</label>
+      <input type="text" id="title">
 
-    <!-- A p element whose id is `error` -->
+      <!-- A textarea element whose label and id are `content` -->
+      <label for="content">Content</label>
+      <textarea name="content" id="content"></textarea>
+
+      <!-- A p element whose id is `error` -->
+      <p id="error"></p>
+
+
+    </form>
+
+
+
 
 </body>
+
 </html>
