working on html files still

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,14 @@
 
   <main></main>
 
-  <footer></footer>
+  <footer>
+    <p id="love">Made with <span id="heart">&hearts;</span> by Matt Morgan</p>
+
+    <p>Portfolio: Matt Morgan</p>
+    <p>Blog: Full Stack Blog</p>
+    <p>Email: m.morgan4491@gmail.com</p>
+
+  </footer>
 </body>
 
 </html>
