--- a/index.html
+++ b/index.html
@@ -16,31 +16,45 @@
 
 <body>
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
+  <header>
+    <button id="toggle"></button>
+  </header>
 
-  <!-- A form element that contains the following: -->
-
-    <form action="">
-
-      <!-- An input element whose label and id are `username` -->
-      <label for="username">Username</label>
-      <input type="text" id="username">
-
-      <!-- An input element whose label and id are `title` -->
-      <label for="title">Title</label>
-      <input type="text" id="title">
-
-      <!-- A textarea element whose label and id are `content` -->
-      <label for="content">Content</label>
-      <textarea name="content" id="content"></textarea>
-
-      <!-- A p element whose id is `error` -->
-      <p id="error"></p>
+  <main>
 
 
-    </form>
+    <aside>
+      <h2>My First Blog</h2>
+    </aside>
 
 
+    <section>
+      <h2>What's on your mind?</h2>
 
+      <!-- A form element that contains the following: -->
+      <form action="">
+
+        <!-- An input element whose label and id are `username` -->
+        <label for="username">Username</label>
+        <input type="text" id="username">
+
+        <!-- An input element whose label and id are `title` -->
+        <label for="title">Title</label>
+        <input type="text" id="title">
+
+        <!-- A textarea element whose label and id are `content` -->
+        <label for="content">Content</label>
+        <textarea name="content" id="content"></textarea>
+
+        <input type="submit">
+
+        <!-- A p element whose id is `error` -->
+        <p id="error">Please complete the form.</p>
+
+
+      </form>
+    </section>
+  </main>
 
 </body>
 
