worked on html and JS files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
   <header>
-    <button id="toggle"></button>
+    <button id="toggle">Dark Mode</button>
   </header>
 
   <main>
