--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,8 @@
   <!-- TODO: Create header, main, and footer elements -->
   <header>
     <h1>My First Blog</h1>
+    <button id="back">⬅ Back</button>
+    <button id="toggle">Dark Mode</button>
   </header>
 
   <main></main>
@@ -26,9 +28,9 @@
   <footer>
     <p id="love">Made with <span id="heart">&hearts;</span> by Matt Morgan</p>
 
-    <p>Portfolio: Matt Morgan</p>
-    <p>Blog: Full Stack Blog</p>
-    <p>Email: m.morgan4491@gmail.com</p>
+    <h5>Portfolio: Matt Morgan</h5>
+    <h5>Blog: Full Stack Blog</h5>
+    <h5>Email: m.morgan4491@gmail.com</h5>
 
   </footer>
 </body>
