--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>What's on your mind?</h2>
 
       <!-- A form element that contains the following: -->
-      <form action="">
+      <form id="formInput">
 
         <!-- An input element whose label and id are `username` -->
         <label for="username">Username</label>
@@ -47,12 +47,13 @@
         <textarea name="content" id="content"></textarea>
 
         <input type="submit">
+        
+      </form>
 
         <!-- A p element whose id is `error` -->
         <p id="error">Please complete the form.</p>
+        
 
-
-      </form>
     </section>
   </main>
 
