--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,17 @@
   <!-- TODO: Create header, main, and footer elements -->
   <header>
     <h1>My First Blog</h1>
-    <button id="back">⬅ Back</button>
+    <a href="./index.html">
+      <button id="back">⬅ Back</button>
+    </a>
     <button id="toggle">Dark Mode</button>
   </header>
 
-  <main></main>
+  <main>
+    <section>
+      <!-- This is where the blog posts should go -->
+    </section>
+  </main>
 
   <footer>
     <p id="love">Made with <span id="heart">&hearts;</span> by Matt Morgan</p>
