--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </form>
 
         <!-- A p element whose id is `error` -->
-        <p id="error">Please complete the form.</p>
+        <p class="hide"  id="error">Please complete the form.</p>
         
 
     </section>
