working on JS still

--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
   <main>
     <section>
       <!-- This is where the blog posts should go -->
+      <ul id="blog-output"></ul>
     </section>
   </main>
 
