--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <button id="toggle">Dark Mode</button>
   </header>
 
-  <main>
+  <main id="mainElement">
     <section>
       <!-- This is where the blog posts should go -->
       <ul id="blog-output"></ul>
