working on blog.js file still

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
   <main id="mainElement">
     <section>
       <!-- This is where the blog posts should go -->
-      <ul id="blog-output"></ul>
+      <ul id="blogOutput"></ul>
     </section>
   </main>
 
